[Fix] Header/carousel
Header
- Bottom line color grey2
- Underline to "cuenta en Vaki"
- Text color correction

Carousel
- Overlap mechanical
- Change text colors

--- a/src/scss/components/_carousel.scss
+++ b/src/scss/components/_carousel.scss
@@ -2,8 +2,11 @@
   --time-transitions: 0.3s;
 }
 
-.general-container {
+.carousel-general {
   @include grid;
+
+  position: relative;
+  height: 0;
 }
 
 .carousel {
@@ -13,15 +16,17 @@
     @include col(4, 6);
   }
 
-  &-overlap {
-    z-index: var(--z-index-mid);
-  }
-
   display: flex;
   align-items: flex-end;
 
+  &-overlap {
+    z-index: var(--z-index-mid);
+    position: relative;
+    top: -100%;
+  }
+
   &-container {
-    margin-bottom: 0.8rem;
+    margin-bottom: 1.8rem;
   }
 }
 
@@ -71,8 +76,9 @@
 .review {
   @include body-m-reg;
 
-  margin: 0;
+  color: var(--grey-2);
   text-align: center;
+  margin: 0;
   @include breakpoint(md) {
     @include body-xl-med;
   }
@@ -84,12 +90,14 @@
   &__name-title {
     @include heading-5;
 
+    color: var(--brand-navy);
     text-align: center;
   }
 
   &__name-subtitle {
     @include body-s-reg;
 
+    color: var(--grey-2);
     font-style: italic;
     text-align: center;
   }
